@@ -564,8 +564,8 @@ int CMP3DecodeLibMad::Decode(int samples, SAMPLE *left, SAMPLE *right)
 	if (filled<samples) {
 		rest=samples-filled;
 		debugprintf("Fülle Rest mit 0 auf: %i Samples\n",rest);
-		bzero(left,rest*sizeof(SAMPLE));
-		bzero(right,rest*sizeof(SAMPLE));
+		memset(left,0,rest*sizeof(SAMPLE));
+		memset(right,0,rest*sizeof(SAMPLE));
 	}
 
 	mutex.Unlock();
