@@ -1656,7 +1656,7 @@ CString__PregReplace_Restart:
 	if (reg) {
 		CString rest=buffer;
 		while (1) {		// Endlosschleife, bis nichts mehr matched
-			bzero(ovector,30*sizeof(int));
+			memset(ovector,0,30*sizeof(int));
 			if ((re=pcre_exec(reg, NULL, (const char*) rest,rest.Len(),0, 0, ovector, 30))>=0) {
 				ret++;
 				Replace=replace;
